force-app/main/default/objects/Bundle_Saving__mdt/Bundle_Saving__mdt.object-meta.xml
<CustomObject>
    <description>(DEPRECATED? -- I don&apos;t believe this is currently in use)</description>
    <label>Bundle Saving</label>
    <pluralLabel>Bundle Savings</pluralLabel>
</CustomObject>