force-app/main/default/objects/Bundle_Saving__mdt/fields/Numeric_Births__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Births__c</fullName>
    <label>Numeric Births</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>