force-app/main/default/objects/Bundle_Saving__mdt/fields/Sum_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Products__c</fullName>
    <label>Sum of Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>